@@ -134,9 +134,13 @@ char *hpd_up =
         "\n Misc:\n"
         "  -b, --backup <dirlog|nukelog|dupefile|lastonlog|imdb|game|tvrage|ge1>\n"
         "                        Perform backup on specified log\n"
-        "  --sort <mode>,<order>,<field>\n"
+        "  --sort [<mode>,]<order>,<field>\n"
         "                        Sort data log entries\n"
-        "                          <mode> can be either 'num' (numeric) or 'str' (string)\n"
+        "                          <mode> (optional) can be either 'num' (numeric) or 'str' (string)\n"
+        "                            If no <mode> parameter is given, it is determined automatically,\n"
+        "                            based on <field> data type.\n"
+        "                            Keep in mind, that any numeric data type can be converted to a string\n"
+        "                            and sorted as such, provided this is explicitly requested with <mode>=str\n"
         "                          <order> can be 'asc' (ascending) or 'desc' (descending)\n"
         "                          Sorts by the specified data log <field>\n"
         "                          Used with -e, -d, -i, -l, -o, -w, -a, -k, -h, -n, -q, -z\n"
