@@ -25,6 +25,7 @@
  *   - % Changed default altlog output (rev. 4_b2)
  *   - ~ 'ipc' generic field broken (was showing PID instead of IPC key) (rev. 4_b3) 
  *   - + Implemented string sorting (rev. 4_b4)
+ *   - % Made --sort <mode> parameter optional (rev. 4_b5)  
  *
  * v2.3:
  *
